<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Adivina Numero</string>
    <string name="adivina">He pensado un número entre 1 y 100. ¡Adivina cual es!</string>
    <string name="intentalo">¡Intentalo!</string>
    <string name="probar">Probar</string>
    <plurals name="intentos">
		<item quantity="one">LLevas %d intento</item>
		<item quantity="other">LLevas %d intentos</item>
	</plurals>
    <string name="mayor">¿%1$d? ¡Uy! El número que he pensado es mayor.</string>
    <string name="menor">¿%1$d? ¡Uy! El número que he pensado es menor.</string>
    <string name="igual">El numero era el %1$d has ganado.</string>
    <string name="vacio">No has puesto ningun numero.</string>
    <string name="nuevoJuego">Volver a jugar</string>
    

</resources>
