<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:fillViewport="true"
    tools:context="${packageName}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/fondo">

        <TextView
            android:id="@+id/textoPrincipal"
            style="@style/textos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:text="@string/adivina" />

        <TextView
            android:id="@+id/textoVictoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:text="@string/igual"
            android:visibility="invisible"
            style="@style/textos" />

        <Button
            android:id="@+id/jugarDeNuevo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nuevoJuego"
            android:visibility="invisible"
            android:onClick="reiniciarJuego"
            style="@style/textosBoton"
            android:background="@drawable/button_custom" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:visibility="invisible"
            style="@style/textos" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="101dp"
            android:layout_weight="0.00" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intentalo"
                style="@style/textos" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="111dp"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    style="@style/textos" />

                <Button
                    android:id="@+id/button"
                    style="@style/textosBoton"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/button_custom"
                    android:onClick="verificarNumero"
                    android:text="@string/probar" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>